syntax = "proto3";
package model;
option go_package = "../model";

import "google/protobuf/any.proto";

message Biz {
  string biz_id = 1;
  int32 biz_type = 2;
  string biz_name = 3;
  string tenant_id = 4;
  string tenant_name = 5;
  int32 state = 6;
  map<string, google.protobuf.Any> attributes = 7;
}