syntax = "proto3";
option go_package = "../model";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Device {
  string device_id = 1;
  string user_id = 2;
  string tenant_id = 3;
  string device_type = 4;
  string device_version = 5;
  string gateway_address = 6;
  google.protobuf.Timestamp online_at = 7;
  google.protobuf.Timestamp offline_at = 8;
  int32 state = 9;
  map<string, google.protobuf.Any> attributes = 10;
}